unpackaged/main/default/objects/Case_Request_Type__mdt/Case_Request_Type__mdt.object-meta.xml
<CustomObject>
    <label>Case Request Type</label>
    <pluralLabel>Case Request Types</pluralLabel>
</CustomObject>