unpackaged/main/default/objects/Case_Request_Type__mdt/fields/Advisor_Request_Item__c.field-meta.xml
<CustomField>
    <fullName>Advisor_Request_Item__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Advisor Request Item</label>
    <type>Checkbox</type>
</CustomField>