unpackaged/main/default/objects/Case_Request_Type__mdt/fields/Global_Action__c.field-meta.xml
<CustomField>
    <fullName>Global_Action__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Global Action</label>
    <type>Checkbox</type>
</CustomField>