unpackaged/main/default/objects/Case_Request_Type__mdt/fields/Household__c.field-meta.xml
<CustomField>
    <fullName>Household__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Household</label>
    <type>Checkbox</type>
</CustomField>