unpackaged/main/default/objects/Case_Request_Type__mdt/fields/Person__c.field-meta.xml
<CustomField>
    <fullName>Person__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Person</label>
    <type>Checkbox</type>
</CustomField>